# hcskr_python

./: README.md  VERSIONINFO  example.py  hcs.py  pyproject.toml  setup.py
hcskr/: __init__.py  hcs.py  keypad.py  mapping.py  request.py  seed.py  transkey.py
